--- a/badge.html
+++ b/badge.html
@@ -95,7 +95,7 @@
         </h3>
 
         <h4 class="profile-badge__content-profile-headline">
-          Lead Software Engineer at EPAM Systems Inc
+          Staff Software Engineer
         </h4>
 
         <h4 class="profile-badge__content-profile-company-school-info">
@@ -104,7 +104,7 @@
             class="profile-badge__content-profile-company-school-info-link profile-badge__content-profile-company-school-info-link--light"
             data-tracking-control-name="public-profile-badge-profile-badge_company-name"
             data-tracking-will-navigate="true"
-            >EPAM Systems</a
+            >Utility Company</a
           >
           |
           <a
